fixing alignment issue for mobile - changed the image size to max 250px

--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,12 @@ footer {
     text-align: center;
 }
 @media only screen and (max-width: 600px) {
+    .wrapper {
+        padding: 30px 0;
+    }
+
     .logo img {
-        max-width: 300px;
+        max-width: 250px;
         margin-bottom: 25px;
     }
     .form-container {
